# hal_nxp

./: README.md
s32k/: CMakeLists.txt  hal_nxp.cmake
s32k/s32k-sdk/: all_devices.cmake
s32k/s32k-sdk/boards/s32k144evb/: clock_config.c  clock_config.h  pin_mux.c  pin_mux.h
s32k/s32k-sdk/devices/S32K116/include/: S32K116.h  S32K116_features.h
s32k/s32k-sdk/devices/S32K116/linker/armc/: S32K116_17_flash.scf  S32K116_17_ram.scf
s32k/s32k-sdk/devices/S32K116/linker/dcc/: S32K116_17_flash.dld  S32K116_17_ram.dld
s32k/s32k-sdk/devices/S32K116/linker/gcc/: S32K116_17_flash.ld  S32K116_17_ram.ld
s32k/s32k-sdk/devices/S32K116/linker/ghs/: S32K116_17_flash.ld  S32K116_17_ram.ld
s32k/s32k-sdk/devices/S32K116/linker/iar/: S32K116_17_flash.icf  S32K116_17_ram.icf
s32k/s32k-sdk/devices/S32K116/startup/: system_S32K116.c  system_S32K116.h
s32k/s32k-sdk/devices/S32K116/startup/armc/: startup_S32K116.S
s32k/s32k-sdk/devices/S32K116/startup/dcc/: startup_S32K116.s
s32k/s32k-sdk/devices/S32K116/startup/gcc/: startup_S32K116.S
s32k/s32k-sdk/devices/S32K116/startup/ghs/: startup_S32K116.s
s32k/s32k-sdk/devices/S32K116/startup/iar/: startup_S32K116.s
s32k/s32k-sdk/devices/S32K118/include/: S32K118.h  S32K118_features.h
s32k/s32k-sdk/devices/S32K118/linker/armc/: S32K118_25_flash.scf  S32K118_25_ram.scf
s32k/s32k-sdk/devices/S32K118/linker/dcc/: S32K118_25_flash.dld  S32K118_25_ram.dld
s32k/s32k-sdk/devices/S32K118/linker/gcc/: S32K118_25_flash.ld  S32K118_25_ram.ld
s32k/s32k-sdk/devices/S32K118/linker/ghs/: S32K118_25_flash.ld  S32K118_25_ram.ld
s32k/s32k-sdk/devices/S32K118/linker/iar/: S32K118_25_flash.icf  S32K118_25_ram.icf
s32k/s32k-sdk/devices/S32K118/startup/: system_S32K118.c  system_S32K118.h
s32k/s32k-sdk/devices/S32K118/startup/armc/: startup_S32K118.S
s32k/s32k-sdk/devices/S32K118/startup/dcc/: startup_S32K118.s
s32k/s32k-sdk/devices/S32K118/startup/gcc/: startup_S32K118.S
s32k/s32k-sdk/devices/S32K118/startup/ghs/: startup_S32K118.s
s32k/s32k-sdk/devices/S32K118/startup/iar/: startup_S32K118.s
s32k/s32k-sdk/devices/S32K142W/: S32K142W.svd
s32k/s32k-sdk/devices/S32K142W/doxygen/: s32k142W.dox
s32k/s32k-sdk/devices/S32K142W/include/: S32K142W.h  S32K142W_features.h
s32k/s32k-sdk/devices/S32K142W/linker/armc/: S32K142W_32_flash.scf  S32K142W_32_ram.scf
s32k/s32k-sdk/devices/S32K142W/linker/dcc/: S32K142W_32_flash.dld  S32K142W_32_ram.dld
s32k/s32k-sdk/devices/S32K142W/linker/gcc/: S32K142W_32_flash.ld  S32K142W_32_ram.ld
s32k/s32k-sdk/devices/S32K142W/linker/ghs/: S32K142W_32_flash.ld  S32K142W_32_ram.ld
s32k/s32k-sdk/devices/S32K142W/linker/iar/: S32K142W_32_flash.icf  S32K142W_32_ram.icf
s32k/s32k-sdk/devices/S32K142W/startup/: system_S32K142W.c  system_S32K142W.h
s32k/s32k-sdk/devices/S32K142W/startup/armc/: startup_S32K142W.S
s32k/s32k-sdk/devices/S32K142W/startup/dcc/: startup_S32K142W.s
s32k/s32k-sdk/devices/S32K142W/startup/gcc/: startup_S32K142W.S
s32k/s32k-sdk/devices/S32K144/: all_lib_device_S32K144.cmake
s32k/s32k-sdk/devices/S32K144/include/: S32K144.h  S32K144_features.h
s32k/s32k-sdk/devices/S32K144/moduletest/: test_cpu_s32k144_driver.c
s32k/s32k-sdk/devices/S32K144/startup/: device_system_S32K144.cmake  system_S32K144.c  system_S32K144.h
s32k/s32k-sdk/devices/S32K144W/: S32K144W.svd
s32k/s32k-sdk/devices/S32K144W/include/: S32K144W.h  S32K144W_features.h
s32k/s32k-sdk/devices/S32K144W/startup/: system_S32K144W.c  system_S32K144W.h
s32k/s32k-sdk/devices/S32K146/include/: S32K146.h  S32K146_features.h
s32k/s32k-sdk/devices/S32K146/startup/: system_S32K146.c  system_S32K146.h
s32k/s32k-sdk/devices/S32K148/include/: S32K148_features.h
s32k/s32k-sdk/devices/S32K148/startup/: system_S32K148.c  system_S32K148.h
s32k/s32k-sdk/drivers/src/adc/: driver_adc.cmake
s32k/s32k-sdk/drivers/src/cmp/: driver_cmp.cmake
s32k/s32k-sdk/drivers/src/crc/: driver_crc.cmake
s32k/s32k-sdk/drivers/src/csec/: driver_csec.cmake
s32k/s32k-sdk/drivers/src/edma/: driver_edma.cmake
s32k/s32k-sdk/drivers/src/eim/: driver_eim.cmake
s32k/s32k-sdk/drivers/src/enet/: driver_enet.cmake
s32k/s32k-sdk/drivers/src/ewm/: driver_ewm.cmake
s32k/s32k-sdk/drivers/src/flash/: driver_flash.cmake
s32k/s32k-sdk/drivers/src/flash_mx25l6433f/: driver_flash_mx25l6433f.cmake
s32k/s32k-sdk/drivers/src/flexcan/: driver_flexcan.cmake
s32k/s32k-sdk/drivers/src/flexio/: driver_flexio.cmake
s32k/s32k-sdk/drivers/src/interrupt/: driver_interrupt.cmake
s32k/s32k-sdk/drivers/src/lin/: driver_lin.cmake
s32k/s32k-sdk/drivers/src/lpi2c/: driver_lpi2c.cmake
s32k/s32k-sdk/drivers/src/lpit/: driver_lpit.cmake
s32k/s32k-sdk/drivers/src/lpspi/: driver_lpspi.cmake
s32k/s32k-sdk/drivers/src/lptmr/: driver_lptmr.cmake
s32k/s32k-sdk/drivers/src/lpuart/: driver_lpuart.cmake
s32k/s32k-sdk/drivers/src/mpu/: driver_mpu.cmake
s32k/s32k-sdk/drivers/src/pins/: CMakelists.txt  driver_pins.cmake
s32k/s32k-sdk/drivers/src/quadspi/: driver_quadspi.cmake
s32k/s32k-sdk/drivers/src/rtc/: driver_rtc.cmake
s32k/s32k-sdk/drivers/src/sai/: driver_sai.cmake
s32k/s32k-sdk/drivers/src/trgmux/: driver_trgmux.cmake
s32k/s32k-sdk/drivers/src/wdog/: driver_wdog.cmake
(+754 files in other folders)
